# HWC-BREAKLINE-GEN

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: backend.yml  frontend.yml
apps/api/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  env.example  main.py  pyproject.toml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/db/: mongo_client.py
apps/api/app/routers/: __init__.py  download.py  health.py  jobs.py  upload.py
apps/api/app/services/: __init__.py  job_manager.py  preview.py  processor.py  storage.py
apps/api/app/utils/: __init__.py  exceptions.py  validators.py
apps/api/db/: azure_tables.py  mongo_client.py
apps/api/models/: __init__.py  job.py  preview.py  processing.py  responses.py
apps/api/routers/: cleanup.py  jobs.py  upload.py
apps/api/services/: cleanup.py  job_manager.py  preview.py  processor.py  storage.py
apps/api/source/: examples.py  process.py
apps/api/utils/: validators.py
apps/web/: README.md  astro.config.mjs  package.json
apps/web/src/components/breakline/: BreaklineApp.tsx  Configuration.tsx  Download.tsx  FileUpload.tsx  InfoBoxes.tsx  Preview.tsx  ProgressIndicator.tsx
apps/web/src/pages/: index.astro
apps/web/src/services/: api.ts  jobs.ts  upload.ts
apps/web/src/styles/: breakline.css
apps/web/src/types/: index.ts
